<resources>
    <string name="app_name">電話帳</string>
    <string name="action_settings">Settings</string>

    <string name="default_name">オーナーさん</string>
    <string name="default_birth"></string>
    <string name="honorific">さん</string>

    <string name="sample_name">しゃーぷ</string>

    <string name="text_guide">電話帳を利用するサンプル</string>
    <string name="text_description_api">APIでオーナー名を取得するよ</string>
    <string name="text_description_api_result">取得できた名前を下記に表示するよ</string>
    <string name="text_description_owner_name">オーナー：</string>
    <string name="text_description_broadcast">Broadcastによる通知を受信するよ\n\nまずは下記ボタンを押してオーナーの誕生日を更新してね</string>
    <string name="text_description_app_mod">Broadcastで通知された誕生日を下記に表示するよ</string>
    <string name="text_description_birthday">誕生日：</string>
    <string name="text_description_app_new">アプリ連携起動するよ\n\n下記ボタンを押すと名前をプリセットして連絡先の新規登録画面を表示するよ</string>
    <string name="text_description_app_new_result">登録したコンタクトIDを下記に表示するよ</string>
    <string name="text_description_input_name">下記に検索/削除したい連絡先の名前を入力してね</string>
    <string name="text_description_app_search">下記ボタンを押すと上記で指定した名前と一致する連絡先を検索するよ"</string>
    <string name="text_description_app_search_result">検索された連絡先のメールアドレスを下記に表示するよ"</string>
    <string name="text_description_app_delete">下記ボタンを押すと上記で指定した名前と一致する連絡先を削除するよ</string>

    <string name="button_get_owner">情報クラスで取得</string>
    <string name="button_get_owner_key">KEY指定で取得</string>
    <string name="button_app_mod">オーナー情報画面(start_App)</string>
    <string name="button_app_new">新規登録画面(start_App)</string>
    <string name="button_app_search">検索画面(start_App)</string>
    <string name="button_app_delete">削除画面(start_App)</string>
</resources>
