<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <ScrollView
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:text="@string/text_guide"
                android:textSize="28sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="30dp"
                android:background="#666666" />

            <TextView
                android:id="@+id/txt_desc_api"
                android:text="@string/text_description_api"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_get_owner"
                android:text="@string/button_get_owner"
                android:textSize="32sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_get_owner_key"
                android:text="@string/button_get_owner_key"
                android:textSize="32sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_desc_api_result"
                android:text="@string/text_description_api_result"
                android:textSize="28sp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_desc_owner_name"
                android:text="@string/text_description_owner_name"
                android:textSize="28sp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="30dp"
                android:background="#666666" />

            <TextView
                android:id="@+id/txt_desc_broadcast"
                android:text="@string/text_description_broadcast"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_app_mod"
                android:text="@string/button_app_mod"
                android:textSize="32sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_desc_app_mod"
                android:text="@string/text_description_app_mod"
                android:textSize="24sp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_desc_birthday"
                android:text="@string/text_description_birthday"
                android:textSize="28sp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="30dp"
                android:background="#666666" />

            <TextView
                android:id="@+id/txt_desc_app_new"
                android:text="@string/text_description_app_new"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_app_new"
                android:text="@string/button_app_new"
                android:textSize="32sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_desc_app_new_result"
                android:text="@string/text_description_app_new_result"
                android:textSize="24sp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/view_contact_id"
                android:textSize="24sp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_desc_name"
                android:text="@string/text_description_input_name"
                android:textSize="24sp"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/editText_name"
                android:text="@string/sample_name"
                android:textSize="32sp"
                android:layout_marginTop="5dp"
                android:layout_width="290sp"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:id="@+id/txt_desc_app_search"
                android:text="@string/text_description_app_search"
                android:textSize="24sp"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_app_search"
                android:text="@string/button_app_search"
                android:textSize="32sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_desc_app_search_result"
                android:text="@string/text_description_app_search_result"
                android:textSize="24sp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/view_mail_address"
                android:textSize="24sp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_desc_app_delete"
                android:text="@string/text_description_app_delete"
                android:textSize="24sp"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_app_delete"
                android:text="@string/button_app_delete"
                android:textSize="32sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
